# fanxipan

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP_90.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: canary-publish.yml  ci.yml  release-gate.yml  release-native.yml  release.yml  stable-publish.yml
crates/fanxipan_analyzer/: Cargo.toml
crates/fanxipan_ast/: Cargo.toml
crates/fanxipan_cli/: Cargo.toml
crates/fanxipan_codegen/: Cargo.toml
crates/fanxipan_compiler/: Cargo.toml
crates/fanxipan_compiler/src/: lib.rs
crates/fanxipan_compiler/tests/: fixture_snapshots.rs
crates/fanxipan_css/: Cargo.toml
crates/fanxipan_diagnostics/: Cargo.toml
crates/fanxipan_hmr/: Cargo.toml
crates/fanxipan_node/: Cargo.toml
crates/fanxipan_node/src/: lib.rs
crates/fanxipan_parser/: Cargo.toml
crates/fanxipan_ssr/: Cargo.toml
crates/fanxipan_template/: Cargo.toml
docs/: AGENTS.md  API_CONTRACT.md  COMPATIBILITY_MATRIX.md  DEPRECATION_POLICY.md  FANXIPAN_SPA_RUNBOOK.md  PRODUCTION_READINESS_CHECKLIST.md  SNAPSHOT.md  release.md
docs/fanxikit/: 01-overview.md  02-relationship-with-fanxipan.md  03-project-structure.md  04-file-based-routing.md  05-layouts.md  06-route-params.md  07-load-functions.md  09-api-routes.md  (+18 more)
example/: dev-server.cmd  dev-server.mjs  index.html  package.json  vite.config.ts
schemas/: deprecations.json  fanxipan.schema.json
scripts/: README.md  benchmark-runtime.mjs  check-api-contract.mjs  check-deprecations.mjs  check-esm-imports.mjs  check-release-gate.mjs  doctor-core-sync.mjs  e2e-basic.mjs  e2e-examples.mjs  e2e-router.mjs  publish-canary.mjs  publish-stable.mjs  push-fanxipan-repo.ps1  run-vite.mjs  run.ps1  smoke-create-fanxipan.mjs  smoke-examples.mjs  soak-runtime.mjs  sync-push-tag-fanxipan.ps1  test-fanxipan-rust.mjs
(+193 files in other folders)
