[workspace]
members = [
  "crates/fanxipan_ast",
  "crates/fanxipan_parser",
  "crates/fanxipan_template",
  "crates/fanxipan_analyzer",
  "crates/fanxipan_codegen",
  "crates/fanxipan_css",
  "crates/fanxipan_ssr",
  "crates/fanxipan_hmr",
  "crates/fanxipan_diagnostics",
  "crates/fanxipan_compiler",
  "crates/fanxipan_cli",
  "crates/fanxipan_node"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["fanxipan Contributors"]
repository = "https://github.com/fanxipanjs/fanxipan"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap = "2"
rustc-hash = "2"
smallvec = "1"
clap = { version = "4", features = ["derive"] }



